site input possible

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Vite App</title>
 </head>
 <body>
-<div id="app"></div>
-<script type="module" src="/main.js"></script>
+
+<script type="module" src="/jspackage/main.js"></script>
+<div>
+    <input type="text" value="" id="inputsite">
+    <input type="button" value="버튼" id="btn">
+</div>
+<div id="app">
+</div>
+
 </body>
 </html>
